--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<br>
 		<button class="btn btn-warning btn-lg" onclick="play()">Dear Mom</button>
 	</center>
-	<audio id="myAudio" src="bdayaudio.mp3"></audio>
+	<audio id="myAudio" src="bdayaudio.mp3" loop = "true"></audio>
 	<script src="main.js"></script>
 </body>
 </html>
